--- a/Scripted/Effects/ChannelParty/party.html
+++ b/Scripted/Effects/ChannelParty/party.html
@@ -3,6 +3,10 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>Channel Party</title>
+    <!-- This is to stop a weird "favicon" error.
+    	Solution taken from here:
+    	https://stackoverflow.com/questions/31075893/im-getting-favicon-ico-error -->
+    <link rel="shortcut icon" href="#" />
 	<style>
 		.inner {
 			position: absolute;
@@ -53,16 +57,17 @@
 </head>
 
 <body id="output">
-<div id="imageholder">
+<!-- <div id="imageholder"> -->
 	<!-- Should contain:
 		<img class="bg" src="(Background image URL)" />
 		<img class="inner" src="(Inner image URL)" />
 	These are meant to be added from the client.js when an image display request is received. -->
-</div>
+<!-- </div> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
+<script src="/socket.io/socket.io.js"></script>
 <script src="CORS.js"></script>
-<script src="../../Images/User-Specific/_Users.js"></script>
+<!-- <script src="../../Images/User-Specific/_Users.js"></script> -->
 <script src="party_phaser.js"></script>
 <script>
 </script>
