--- a/Scripted/Effects/ChannelParty/party.html
+++ b/Scripted/Effects/ChannelParty/party.html
@@ -8,55 +8,22 @@
     	https://stackoverflow.com/questions/31075893/im-getting-favicon-ico-error -->
     <link rel="shortcut icon" href="#" />
 	<style>
-		.inner {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			z-index: 3;
-		}
-		.shadowfilter {
-			-webkit-filter: drop-shadow(0px 0px 15px rgba(0, 0, 0, 1));
-			 filter: drop-shadow(0px 0px 15px rgba(0, 0, 0, 1));
-		}
-		
-		$size: 300px;
-
 		body {
-		  margin: 0;
-		  padding: 0;
-		}
-
-		img, div {
-		  width: $size;
-		  height: $size;
-		}
-
-		.x {
-		  animation: x 13s linear infinite alternate;
-		}
-
-		.y {
-		  animation: y 7s linear infinite alternate;
-		}
-
-		@keyframes x {
-		  100% {
-			transform: translateX( calc(100vw - #{$size}) );
-		  }
-		}
-
-		@keyframes y {
-		  100% {
-			transform: translateY( calc(100vh - #{$size}) );
-		  }
+			margin: 0;
+			padding: 0;
 		}
 		
+		.game {
+		 	margin: 0;
+			padding: 0;
+			width: 100%;
+			height: 100%;
+		}
 	</style>
-
 </head>
 
-<body id="output">
+<body>
+<div id="gameContainer" class="game"></div>
 <!-- <div id="imageholder"> -->
 	<!-- Should contain:
 		<img class="bg" src="(Background image URL)" />
