--- a/Scripted/Effects/ChannelParty/party.html
+++ b/Scripted/Effects/ChannelParty/party.html
@@ -13,7 +13,24 @@
 			padding: 0;
 		}
 		
-		.game {
+		.fullscreen {
+		 	margin: 0;
+			padding: 0;
+			width: 100%;
+			height: 100%;
+			position: absolute;
+		}
+		
+		.bg {
+		 	margin: 0;
+			padding: 0;
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			z-index: -1;
+		}
+		
+		video {
 		 	margin: 0;
 			padding: 0;
 			width: 100%;
@@ -24,11 +41,18 @@
 
 <body>
 
-<div id="gameContainer" class="game"></div>
+<div id="background" class="fullscreen"></div>
+<div id="gameContainer" class="fullscreen"></div>
+<div id="bla" class="fullscreen"></div>
+<div id="hypeContainer" class="bg">
+	<div id="videoHypeContainer" class="fullscreen"></div>
+	<div id="imageHypeContainer" class="fullscreen"></div>
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
+<script src="../effectClient.js"></script>
 <script src="party_phaser.js"></script>
 <script>
 </script>
