Added reconnection robustness to ScrptedEffects
Now gets the scripts list anew every time it reconnects, and whenever it
does, it removes scritps that were loaded and are not present in the new
lists, loads scripts from the new list that weren't loaded alread, and
leaves the rest untouched.
It makes it so you can change which scripts should show in
Effects/ScriptedEffects/effect.js, restart the server and the clients will
change their contents how you'd expect.

--- a/Scripted/Effects/ScriptedEffects/ScriptedEffects.html
+++ b/Scripted/Effects/ScriptedEffects/ScriptedEffects.html
@@ -27,7 +27,6 @@
     		height: 100%;
     		margin: 0;
     		padding: 0;
-    		/*top:0px; left:0px*/
     	}
     	
     	.framediv {
@@ -47,6 +46,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="assert.js"></script>
+<script src="../effectClient.js"></script>
 <script src="ScriptedEffects.js"></script>
 
 </body>
