--- a/Scripted/Effects/ParrotMate/parrot.html
+++ b/Scripted/Effects/ParrotMate/parrot.html
@@ -3,6 +3,10 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>Parrot Mate</title>
+    <!-- This is to stop a weird "favicon" error.
+        Solution taken from here:
+        https://stackoverflow.com/questions/31075893/im-getting-favicon-ico-error -->
+    <link rel="shortcut icon" href="#" />
     <style>
         * {
             margin: 0;
@@ -28,7 +32,9 @@
 	</div>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="files.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+	<script src="../effectClient.js"></script>
+    <script src="files.js"></script>
 	<script src="engine.js"></script>
 	<script src="sequences.js"></script>
 	<script src="parrot.js"></script>
