--- a/Scripted/Effects/ParrotMate/parrot.html
+++ b/Scripted/Effects/ParrotMate/parrot.html
@@ -3,38 +3,100 @@
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>Parrot Mate</title>
-    <!-- This is to stop a weird "favicon" error.
-        Solution taken from here:
-        https://stackoverflow.com/questions/31075893/im-getting-favicon-ico-error -->
-    <link rel="shortcut icon" href="#" />
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-        .imgbox {
-            display: grid;
-            height: 100%;
-        }
-        .center-fit {
-            max-width: 100%;
-            max-height: 100vh;
-            margin: auto;
-            visibility: "hidden";
-        }
-    </style>
+	<!-- This is to stop a weird "favicon" error.
+		Solution taken from here:
+		https://stackoverflow.com/questions/31075893/im-getting-favicon-ico-error -->
+	<link rel="shortcut icon" href="#" />
+	<style>
+		
+		.imgbox {
+			display: grid;
+			height: 100%;
+		}
+		
+		.center-fit {
+			max-width: 100%;
+			max-height: 100vh;
+			margin: auto;
+			visibility: "hidden";
+		}
+		
+		.bubble-holder {
+			position: absolute;
+			left: 65%;
+			top: 5%;
+		}
+		
+		.bubble {
+			position: absolute;
+			font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+			font-size: 48px;
+			line-height: 24px;
+			width: 400px;
+			background: #fff;
+			border-radius: 40px;
+			padding: 24px;
+			text-align: center;
+			color: #000;
+			border: #0c0c0c solid 4px;
+			z-index: 2;
+		}
+
+		.bubble:after {
+			content: "";
+			position: absolute;
+			width: 0px;
+			border-style: solid;
+			border-width: 20px 20px 0;
+			border-color: #CF5858 transparent;
+			border-left: 20px solid #fff;
+			border-right: 8px solid transparent;
+			border-top: 8px solid #fff;
+			border-bottom: 16px solid transparent;
+			left: 34px;
+			bottom: -24px;
+			display: block;
+			z-index: 1;
+		}
+
+		.bubble:before {
+			content: "";
+			width: 0px;
+			height: 0px;
+			position: absolute;
+			border-left: 24px solid #000;
+			border-right: 12px solid transparent;
+			border-top: 8px solid #000;
+			border-bottom: 20px solid transparent;
+			left: 32px;
+			bottom: -28px;
+			display: block;
+			z-index: 0;
+		}
+		
+		.bubble-text {
+			white-space: pre-wrap;
+			line-height: 1em;
+		}
+	</style>
 </head>
 <body>
 	<div id="soundholder"></div>
 	
 	<div id="imageholder" class="imgbox">
-	    <img id="parrot" class="center-fit" src="">
+		<img id="parrot" class="center-fit" src="">
+			<div id="bubble" class="bubble-holder">
+				<div id="bubbleText" class="bubble bubble-bottom-left bubble-text"></div>
+			</div>
 	</div>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="/socket.io/socket.io.js"></script>
+	
+	<script type="text/javascript">$('#bubble').hide();</script>
+	
+	<script src="/socket.io/socket.io.js"></script>
 	<script src="../effectClient.js"></script>
-    <script src="files.js"></script>
+	<script src="files.js"></script>
 	<script src="engine.js"></script>
 	<script src="sequences.js"></script>
 	<script src="parrot.js"></script>
