--- a/Scripted/Effects/ParrotMate/parrot.html
+++ b/Scripted/Effects/ParrotMate/parrot.html
@@ -107,9 +107,13 @@
 	
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="../effectClient.js"></script>
+	<script src="../clientUtils.js"></script>
 	<script src="files.js"></script>
+	<script src="parrot.js"></script>
 	<script src="engine.js"></script>
 	<script src="sequences.js"></script>
-	<script src="parrot.js"></script>
+	<script type="text/javascript">
+		parrotMate.start();
+	</script>
 </body>
 </html>
