Extracted image drop to tagged multi-effect
Now F Shower attaches by the new 'imgdrop' tag, as can anything else that
wants to drop a shower of images.
To support the increased functionality, all of the hard-coded values in
the image drop page have been turned to defaults, used only if the drop
requests did not specify any of them.
In order to facilitate that, I've added a new function to clientUtils,
applyDefaults(obj, defs), which adds all the default values in defs to obj
unless obj already has them - a function I should have made and used long
ago already, really. ^_^;
Well, I'll use it from now on.

--- a/Scripted/Effects/ImageDropper/imgdrop.html
+++ b/Scripted/Effects/ImageDropper/imgdrop.html
@@ -31,6 +31,6 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="../clientUtils.js"></script>
 <script src="../effectClient.js"></script>
-<script src="fshower.js"></script>
+<script src="imgdrop.js"></script>
 </body>
 </html>
