--- a/Scripted/Effects/TextDisplay/Styles/Regular/Regular.html
+++ b/Scripted/Effects/TextDisplay/Styles/Regular/Regular.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
 	<meta charset="UTF-8">
-	<title>Scripted Effects</title>
+	<title>Text Display: Regular</title>
     <!-- This is to stop a weird "favicon" error.
     	Solution taken from here:
     	https://stackoverflow.com/questions/31075893/im-getting-favicon-ico-error -->
@@ -41,12 +41,11 @@
 </head>
 
 <body>
-<div id="frames" class="frameholder"></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="../effectClient.js"></script>
-<script src="ScriptedEffects.js"></script>
+<!-- <script src="../effectClient.js"></script> -->
+<!-- <script src="regular.js"></script> -->
 
 </body>
 </html>
