--- a/Scripted/Effects/TextDisplay/textdisp.html
+++ b/Scripted/Effects/TextDisplay/textdisp.html
@@ -2,35 +2,52 @@
 <html>
 <head lang="en">
 	<meta charset="UTF-8">
-	<title>Image Dropper</title>
+	<title>Text Display</title>
 	<!-- This is to stop a weird "favicon" error.
 		Solution taken from here:
 		https://stackoverflow.com/questions/31075893/im-getting-favicon-ico-error -->
 	<link rel="shortcut icon" href="#" />
+	
 	<style>
 		body {
-			overflow: hidden; /* Hide scrollbars */
+			margin: 0;
+			padding: 0;
 		}
 		
-		.faller {
+		iframe {
+			border: 0;
+			width: 100%;
+			height: 100%;
+		}
+		
+		.frameholder {
+			display: block;
 			position: absolute;
-			top: 0;
-			left: 50%;
-			transform: translate(0%, -100%);
-			margin-left: 0;
-			margin-top: 0;
+			width: 100%;
+			height: 100%;
+			margin: 0;
+			padding: 0;
+		}
+		
+		.framediv {
+			display: block;
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			margin: 0;
+			padding: 0;
 		}
 	</style>
 </head>
-<body id="output">
 
-<div id="imageholder">
-</div>
+<body>
+<div id="frames" class="frameholder"></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="../clientUtils.js"></script>
 <script src="../effectClient.js"></script>
-<script src="imgdrop.js"></script>
+<script src="../clientUtils.js"></script>
+<script src="textdisp.js"></script>
+
 </body>
 </html>
