Client restructuring, Image Drop effect support
Moved the common client files to their own folder rather than continuing
to register each one on its own URL. I only had two before, now created
another one (imageEffects.js) and it seemed like a good idea to just group
them together.
Subsequently changed all the references in the client HTML files from
"../effectClient.js" and the like to "/common/effectClient.js".

Extracted the ImageEffects class from imgdisp.js to its own file to be
used in multiple scripts. Currently used by imgdisp and imgdrop.

--- a/Scripted/Effects/ChannelParty/party.html
+++ b/Scripted/Effects/ChannelParty/party.html
@@ -63,7 +63,7 @@
 <script>$('#finalVideo').hide();</script>
 <script src="https://cdn.jsdelivr.net/npm/phaser@3.16.1/dist/phaser-arcade-physics.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="../effectClient.js"></script>
+<script src="/common/effectClient.js"></script>
 <script src="party_phaser.js"></script>
 </body>
 </html>
