--- a/Scripted/Effects/ImageDisplay/imgdisp.html
+++ b/Scripted/Effects/ImageDisplay/imgdisp.html
@@ -63,9 +63,10 @@
 </script>
 
 
-<script src="jQueryRotate.js"></script>
+<script src="/common/jQueryRotate.js"></script>
+<script src="/common/imageEffects.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="../effectClient.js"></script>
+<script src="/common/effectClient.js"></script>
 <script src="imgdisp.js"></script>
 </body>
 </html>
