--- a/Scripted/Effects/ParrotMate/parrot.html
+++ b/Scripted/Effects/ParrotMate/parrot.html
@@ -37,8 +37,8 @@
 	</script>
 	
 	<script src="/socket.io/socket.io.js"></script>
-	<script src="../effectClient.js"></script>
-	<script src="../clientUtils.js"></script>
+	<script src="/common/clientUtils.js"></script>
+	<script src="/common/effectClient.js"></script>
 	<script src="files.js"></script>
 	<script src="parrot.js"></script>
 	<script src="engine.js"></script>
