--- a/Scripted/Effects/TextDisplay/Styles/Creepy/Creepy.html
+++ b/Scripted/Effects/TextDisplay/Styles/Creepy/Creepy.html
@@ -52,8 +52,8 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="../../../clientUtils.js"></script>
-<script src="../../../effectClient.js"></script>
+<script src="/common/clientUtils.js"></script>
+<script src="/common/effectClient.js"></script>
 <script src="Creepy.js"></script>
 
 </body>
