--- a/Scripted/Effects/Countdown/countdown.html
+++ b/Scripted/Effects/Countdown/countdown.html
@@ -35,7 +35,7 @@
  
 <script src="https://cdn.jsdelivr.net/npm/phaser@3.16.1/dist/phaser-arcade-physics.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="../effectClient.js"></script>
+<script src="/common/effectClient.js"></script>
 <script src="jquery.fittext.js"></script>
 <script src="countdown.js"></script>
 </body>
