--- a/Scripted/Effects/ImageDropper/imgdrop.html
+++ b/Scripted/Effects/ImageDropper/imgdrop.html
@@ -29,8 +29,10 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="../clientUtils.js"></script>
-<script src="../effectClient.js"></script>
+<script src="/common/clientUtils.js"></script>
+<script src="/common/imageEffects.js"></script>
+<script src="/common/clientUtils.js"></script>
+<script src="/common/effectClient.js"></script>
 <script src="imgdrop.js"></script>
 </body>
 </html>
