--- a/Scripted/Effects/ScriptedEffects/ScriptedEffects.html
+++ b/Scripted/Effects/ScriptedEffects/ScriptedEffects.html
@@ -45,7 +45,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="../effectClient.js"></script>
+<script src="/common/effectClient.js"></script>
 <script src="ScriptedEffects.js"></script>
 
 </body>
