Added hidden entities, fixed Add Element button.
(The one in dynamicArrayGui.mjs.)

--- a/src/GUI/cfg.html
+++ b/src/GUI/cfg.html
@@ -20,6 +20,8 @@
 
 	<!-- This loads all the configuration entity classes from the server side into
 	     window.Ents, which we then place in the global variable Entities. -->
+	<script src="./jQueryExtensions.js"></script>
+	<script src="/common/clientUtils.js"></script>
 	<script src="/common/clientUtils.js"></script>
 	<script src="/common/configEntities.js"></script>
 	<script>
