--- a/src/GUI/config.html
+++ b/src/GUI/config.html
@@ -20,7 +20,7 @@
 
 	<script src="/common/configEntities.js"></script>
 	<script type="module" src="./entityGuis/entityGuis.mjs"></script>
-	<script type="module" src="./config.mjs"></script>
+<!--	<script type="module" src="./config.mjs"></script>-->
 </head>
 <body>
 <!--<form class="uk-form-horizontal">-->
@@ -128,7 +128,7 @@
 													<span uk-icon="icon: trash"></span>
 												</button>
 											</div>
-											<button class="uk-button uk-button-primary uk-width-1-1 uk-margin-small-top">Add Element</button>
+											<button class="uk-button uk-button-default uk-width-1-1 uk-margin-small-top">Add Element</button>
 										</div> </div>
 									</li>
 								</ul>
