Added suppression of warnings for WebStorm.
Made it ignore two things:
1. Script path resolution for files taken from the server.
2. Labels for input tags.

This should keep WebStorm from warning me about these things every time I commit changes to these files, which is really getting tedious. =\

--- a/src/GUI/config.html
+++ b/src/GUI/config.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<!--suppress HtmlFormInputWithoutLabel -->
+<html lang="en">
+<head>
 	<meta charset="UTF-8">
 	<title>Fluxbot Configuration Page</title>
 	<!-- This is to stop a weird "favicon" error.
@@ -16,8 +17,10 @@
 	<script src="js/uikit-icons.min.js"></script>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<!--suppress HtmlUnknownTarget -->
 	<script src="/socket.io/socket.io.js"></script>
 
+	<!--suppress HtmlUnknownTarget -->
 	<script src="/common/configEntities.js"></script>
 	<script type="module" src="./entityGuis/entityGuis.mjs"></script>
 <!--	<script type="module" src="./config.mjs"></script>-->
