--- a/src/GUI/cfg.html
+++ b/src/GUI/cfg.html
@@ -16,12 +16,15 @@
 	<script src="js/uikit-icons.min.js"></script>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<!--suppress HtmlUnknownTarget -->
 	<script src="/socket.io/socket.io.js"></script>
 
 	<!-- This loads all the configuration entity classes from the server side into
 	     window.Ents, which we then place in the global variable Entities. -->
 	<script src="./jQueryExtensions.js"></script>
+	<!--suppress HtmlUnknownTarget -->
 	<script src="/common/clientUtils.js"></script>
+	<!--suppress HtmlUnknownTarget -->
 	<script src="/common/configEntities.js"></script>
 	<script>
 		const Entities = window.Ents.Entities;
