Configuration key input (KeyGui) works.
The full keyboard shortcut still shows up as a dynamic array though.

--- a/src/GUI/cfg.html
+++ b/src/GUI/cfg.html
@@ -29,6 +29,7 @@
 	<script>
 		const Entities = window.Ents.Entities;
 		const EntityFactory = window.Ents.Factory;
+		const Enums = window.Ents.Enums;
 		window.Ents.RegisterAll();
 	</script>
 
