--- a/src/Modules/Phasmophobia/phasmophobia.html
+++ b/src/Modules/Phasmophobia/phasmophobia.html
@@ -15,12 +15,15 @@
 			height: 100%;
 			margin: 0;
 			padding: 0;
+			background-color: #00000040;
 		}
 
 		.grid-container {
 			/*background-color: #2196F3;*/
 			display: grid;
-			grid-template-columns: auto auto auto auto auto auto;
+			grid-template-columns: auto auto auto;
+			grid-template-rows: auto 1fr 1fr;
+			grid-template-areas: 'header header header' 'main main main' 'main main main';
 			/*padding: 10px;*/
 			grid-gap: 10px;
 			height: 100%;
@@ -33,6 +36,12 @@
 			padding: 20px;
 			font-size: 30px;
 			text-align: center;
+		}
+		.grid-header {
+			grid-area: header;
+			text-align: center;
+			padding: 20px;
+			font-size: 60px;
 		}
 		/*noinspection ALL*/
 		.center {
@@ -67,6 +76,7 @@
 <body>
 <div class="main" id="all">
 	<div id="evidence" class="grid-container">
+		<div id="ghostNameContainer" class="grid-header">Name: <span id="ghostName">John Smith</span></div>
 <!--		<div class="grid-item container"><div class="sub"><img class="center sq" src="images/Off.png"><img class="center sq" src="./images/box.png"></div></div>-->
 <!--		<div class="grid-item container"><div class="sub"><img class="center sq" src="images/Off.png"></div></div>-->
 <!--		<div class="grid-item container"><div class="sub"><img class="center sq" src="images/Off.png"></div></div>-->
