Uploading and deleting image files works for Image Commands.
No audio or multi-file support yet, and also I need to change the way the files are saved in the user folder. Right now it uses the given filename, but that means that if two different files (different IDs) upload different files with the same name, the last one will override the previous one.
I need to change the data save files so they store both the original filename and the local filename, and have it assign unique filenames for the local files.

Also I need to make it so if a data upload entity is removed, a delete request is sent to the server so as to avoid unused files from littering the server.

--- a/src/GUI/config.html
+++ b/src/GUI/config.html
@@ -390,7 +390,7 @@
 	let bar = $('#js-progressbar')[0];
 
 	window.up = UIkit.upload('#uploader', {
-		url: '/data/mod/Random Image/images',
+		url: '/data/mod/Image Commands/Images',
 		name: 'dataFile',
 		multiple: true,
 
@@ -406,7 +406,7 @@
 			imageName = files.dataFile.name;
 			$('#imgNameTag').text(imageName);
 			let contentType = req.getResponseHeader('content-type');
-			img.attr('src', `data:${contentType}; base64,${files.dataFile.data}`);
+			img.attr('src', files.dataFile.data);
 			UIkit.toggle('#upload-toggler').toggle();
 		},
 
