--- a/src/GUI/cfg.html
+++ b/src/GUI/cfg.html
@@ -16,6 +16,7 @@
 	<script src="js/uikit-icons.min.js"></script>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
 	<!--suppress HtmlUnknownTarget -->
 	<script src="/socket.io/socket.io.js"></script>
 
