Image and sound data files can be uploaded, saved and reloaded.
Damn, that took forever. XD
Now multiple files!

--- a/src/GUI/cfg.html
+++ b/src/GUI/cfg.html
@@ -34,6 +34,7 @@
 		window.Ents.RegisterAll();
 	</script>
 
+	<script type="module" src="./entityGuis/dataContents/dataContents.mjs"></script>
 	<script type="module" src="./entityGuis/guiElements/guiElements.mjs"></script>
 	<script type="module" src="./entityGuis/entityGuis.mjs"></script>
 	<script type="module" src="./config.mjs"></script>
