Image commands show names in titles, switched moduleClient to mjs.
Also switched *everything* that used it.
It all uses proper modules now.

--- a/src/Modules/Censor/censor.html
+++ b/src/Modules/Censor/censor.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<!--suppress HtmlUnknownTarget -->
+<html lang="en">
+<head>
 	<meta charset="UTF-8">
 	<title>Show Image</title>
 	<!-- This is to stop a weird "favicon" error.
@@ -23,7 +24,7 @@
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/common/moduleClient.js"></script>
-<script src="censor.js"></script>
+<script type="module" src="/common/moduleClient.mjs"></script>
+<script type="module" src="censor.mjs"></script>
 </body>
 </html>
