--- a/src/Modules/Countdown/countdown.html
+++ b/src/Modules/Countdown/countdown.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
-
-<head lang="en">
+<!--suppress HtmlUnknownTarget -->
+<html lang="en">
+<head>
 	<meta charset="UTF-8">
 	<title>Countdown</title>
     <!-- This is to stop a weird "favicon" error.
@@ -21,7 +21,7 @@
 			color: white;
 			background-color: rgba(0, 0, 0, 0.5);
 			border-color: black;
-			border-width: 3;
+			border-width: 3px;
 		}
 	</style>
 </head>
@@ -35,8 +35,8 @@
  
 <script src="https://cdn.jsdelivr.net/npm/phaser@3.16.1/dist/phaser-arcade-physics.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/common/moduleClient.js"></script>
+<script type="module" src="/common/moduleClient.mjs"></script>
 <script src="jquery.fittext.js"></script>
-<script src="countdown.js"></script>
+<script type="module" src="countdown.mjs"></script>
 </body>
 </html>
