--- a/src/Modules/Phasmophobia/phasmophobia.html
+++ b/src/Modules/Phasmophobia/phasmophobia.html
@@ -87,7 +87,7 @@
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="/common/moduleClient.js"></script>
-<script src="phasmophobia.js"></script>
+<script type="module" src="/common/moduleClient.mjs"></script>
+<script type="module" src="phasmophobia.mjs"></script>
 </body>
 </html>
