--- a/src/Modules/TextDisplay/Styles/Creepy/Creepy.html
+++ b/src/Modules/TextDisplay/Styles/Creepy/Creepy.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--suppress HtmlUnknownTarget -->
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -52,9 +53,9 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/common/clientUtils.js"></script>
-<script src="/common/moduleClient.js"></script>
-<script src="Creepy.js"></script>
+<script type="module" src="/common/clientUtils.mjs"></script>
+<script type="module" src="/common/moduleClient.mjs"></script>
+<script type="module" src="Creepy.mjs"></script>
 
 </body>
 </html>
