--- a/src/Modules/TextDisplay/Styles/Regular/Regular.html
+++ b/src/Modules/TextDisplay/Styles/Regular/Regular.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<!--suppress HtmlUnknownTarget -->
+<html lang="en">
+<head>
 	<meta charset="UTF-8">
 	<title>Text Display: Regular</title>
     <!-- This is to stop a weird "favicon" error.
@@ -19,8 +20,9 @@
     		width: 100%;
     		height: 100%;
     	}
-    	
-    	.frameholder {
+
+        /*noinspection CssUnusedSymbol*/
+        .frameholder {
     		display: block;
     		position: absolute;
     		width: 100%;
@@ -28,7 +30,8 @@
     		margin: 0;
     		padding: 0;
     	}
-    	
+
+        /*noinspection CssUnusedSymbol*/
     	.framediv {
     		display: block;
     		position: absolute;
@@ -44,8 +47,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/common/moduleClient.js"></script>
-<!-- <script src="../moduleClient.js"></script> -->
+<script type="module" src="/common/moduleClient.mjs"></script>
 <!-- <script src="regular.js"></script> -->
 
 </body>
